# goal-analytics-p2

./: .gitignore  Readme.md  p2.ipynb  pyproject.toml
